--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-material-buttons",
+  "name": "@react-native-oh-tpl/react-native-material-buttons",
   "version": "0.6.1",
   "license": "BSD-3-Clause",
   "author": "Alexander Nazarov <n4kz@n4kz.com>",
@@ -12,7 +12,7 @@
 
   "repository": {
     "type": "git",
-    "url": "git://github.com/n4kz/react-native-material-buttons.git"
+    "url": "git://github.com/react-native-oh-library/react-native-material-buttons.git"
   },
 
   "dependencies": {
